Use argLine Jacoco parameter only for coverage profile