@@ -116,6 +116,20 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <!-- Newer version do not yet work with Java 11 -->
+                        <version>2.20</version>
+                        <!-- workaround for: https://issues.jboss.org/browse/UNDERTOW-1355 -->
+                        <configuration>
+                            <argLine>
+                                ${argLine}
+                                --illegal-access=deny
+                                -Xmx1500m
+                            </argLine>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
